Fix issue with the menu overlapping the footer (fixes #127)

--- a/css/_vars.scss
+++ b/css/_vars.scss
@@ -12,6 +12,7 @@ $mono-font: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
 
 // Layout
 $content-width: 1050px;
+$content-offset: 21rem;
 
 @mixin run-in {
 	display: inline-block;
